@@ -3,7 +3,11 @@ const path = require("path");
 const hljs = require("highlight.js");
 const hljsVtl = require("../src/vtl.js");
 
-const filePaths = ["basic/hello-world.vm", "basic/string-interp.vm"];
+const filePaths = [
+  "basic/hello-world.vm",
+  "basic/directive.vm",
+  "basic/string-interp.vm",
+];
 
 describe("VTL syntax highlighting", () => {
   beforeAll(() => {
